Fix but introduced into AddOnlyChampSet after increasing the bit-partition size. Add/Update some Jmh tests.