@@ -150,6 +150,8 @@
         <configuration>
             <argLine>--add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED</argLine>
             <argLine>--add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED</argLine>
+          <argLine>-Djdk.attach.allowAttachSelf</argLine>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
             <parallel>classesAndMethods</parallel>
             <forkCount>4</forkCount>
         </configuration>
